fix about spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -250,7 +250,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  
+
   &__banner {
     display: flex;
 
@@ -279,7 +279,7 @@ body {
       width: 40vw;
 
       @media screen and (max-width: 500px) {
-        width: 100vw;
+        width: 100%;
       }
     }
 
@@ -295,7 +295,6 @@ body {
   }
 
   &__description {
-    padding: 1rem;
   }
 }
 
